fixed ui alignment in role master

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -739,7 +739,7 @@ color:#545454;
 }
 
 .m-t-30 {
-  margin-top: 30px;
+  margin-top: 30px !important;
 }
 
 .m-t-35 {
@@ -815,7 +815,7 @@ color:#545454;
 }
 
 .m-t-40 {
-  margin-top: 40px;
+  margin-top: 40px !important;
 }
 
 
